2014-03-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* style.css:
	* Array.h:
	* TextViewEditable.h:
	* TextViewEditable.cpp:
	* OutlineCellRenderer.h:
	* X3DTextViewEditable.h:
	* X3DTextViewEditable.cpp:
	* OutlineCellRenderer.cpp: 

2014-03-28  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* Snow.x3dv:
	* Fire.x3dv:
	* Rain.x3dv:
	* Fire2.x3dv:
	* Smoke.x3dv:
	* Water1.x3dv:
	* Water2.x3dv:
	* Water2.x3dv:
	* Water1.x3dv:
	* Bubbles.x3dv:
	* Fountain.x3dv:
	* Snow.x3dv:
	* Fire.x3dv:
	* Rain.x3dv:
	* Smoke.x3dv:
	* earth.wrl:
	* Fire2.x3dv:
	* Beethoven.wrl:
	* coasts.wrl:
	* Bubbles.x3dv:
	* Fountain.x3dv:
	* Box.x3dv:
	* Cone.x3dv:
	* Text.x3dv:
	* Arc2D.x3dv:
	* Disk2D.x3dv:
	* Sphere.x3dv:
	* PointSet.x3dv:
	* Circle2D.x3dv:
	* Cylinder.x3dv:
	* Extrusion.x3dv:
	* Polyline2D.x3dv:
	* Box.x3dv:
	* ArcClose2D.x3dv:
	* Rectangle2D.x3dv:
	* Text.x3dv:
	* Polypoint2D.x3dv:
	* Cone.x3dv:
	* Arc2D.x3dv:
	* IndexedLineSet.x3dv:
	* TriangleSet2D.x3dv:
	* Sphere.x3dv:
	* ElevationGrid.x3dv:
	* Disk2D.x3dv:
	* IndexedFaceSet.x3dv:
	* PointSet.x3dv:
	* Cylinder.x3dv:
	* Circle2D.x3dv:
	* Extrusion.x3dv:
	* Polyline2D.x3dv:
	* ArcClose2D.x3dv:
	* Polypoint2D.x3dv:
	* Rectangle2D.x3dv:
	* IndexedLineSet.x3dv:
	* ElevationGrid.x3dv:
	* TriangleSet2D.x3dv:
	* IndexedFaceSet.x3dv: 

2014-03-28  Holger Seelig  <holger.seelig@yahoo.de>

	* DiskSensor.x3dv:
	* DiskSensor.x3dv: 

2014-03-28  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserWidget.cpp:
	* DiskSensor.x3dv:
	* WheelSensor.x3dv:
	* DiskSensor.x3dv:
	* WheelSensor.x3dv: 

2014-03-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Example.x3dv:
	* CheckButton.x3dv:
	* RadioButton.x3dv:
	* WheelSensor.x3dv: 

2014-03-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Fields.pl:
	* Delay.x3dv:
	* MFBool.x3dv:
	* Rotor.x3dv:
	* SFNode.x3dv:
	* MFNode.x3dv:
	* SFTime.x3dv:
	* SFBool.x3dv:
	* MFTime.x3dv:
	* MFFloat.x3dv:
	* MFImage.x3dv: