@@ -1,5 +1,11 @@
 2014-03-28  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* TextViewEditable.h:
+	* TextViewEditable.cpp:
+	* X3DTextViewEditable.h: 
+
+2014-03-28  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Makefile.am:
 	* style.css:
 	* Array.h:
